# evo_dm

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
archive/scripts/: calculate_selectivity.py  evol_game.py  hgt_exp.py  landscapes.py
docs/: architecture.md  methodology.md  refactoring_proposals.md  rl_integration.md
evodm/: __init__.py  calculate_selectivity.py  dpsolve.py  evol_game.py  exp.py  hyperparameters.py  landscapes.py  learner.py  misc.py  seascapes_exp.py  theoretical_model_compute.py  tianshou_learner.py
evodm/agents/: legacy_learner.py  tianshou_agent.py
evodm/core/: hyperparameters.py  landscapes.py
evodm/envs/: __init__.py  helpers.py  legacy_env.py  sswm_env.py  wright_fisher_env.py
evodm/examples/: mira_mdp.py
evodm/test/: test_evol_game.py  test_landscapes.py  test_learner.py
evodm/utils/: analysis.py  mdp_wrapper.py
examples/: compare.py  run.py  streamlit_app.py
tests/: test_env_integration.py  test_landscapes.py  test_sswm_env.py  test_tianshou_learner.py  test_wright_fisher_env.py
