[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evodm"
version = "0.1.3"
description = "Evolutionary Decision Making"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy~=1.26.4",
    "pandas~=2.3.1",
    "scipy~=1.16.0",
    "matplotlib~=3.10.3",
    "torch~=2.7.1",
    "tianshou~=1.2.0",
    "keras~=3.10.0",
    "tqdm~=4.67.1",
    "gymnasium~=0.28.1",
    "tensorflow~=2.18.0",
    "networkx~=3.5",
    "ruptures~=1.1.9",
    "pymdptoolbox",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest~=8.4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["evodm*"]
