[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evodm"
version = "0.1.3"
description = "Evolutionary Decision Making"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy~=2.3.5",
    "pandas~=2.3.3",
    "scipy~=1.16.3",
    "matplotlib~=3.10.8",
    "torch~=2.9.1",
    "tianshou~=2.0.0",
    "keras~=3.13.0",
    "tqdm~=4.67.1",
    "gymnasium~=1.2.3",
    "tensorflow~=2.20.0",
    "networkx~=3.6.1",
    "ruptures~=1.1.10",
    "pymdptoolbox",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest~=8.4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["evodm*"]
